# rust-grapheme-machine

./: Cargo.toml  README.md
src/: lib.rs  properties.rs  state.rs  tests.rs
src/properties/: table.rs  test_table.rs
src/state/: tests.rs
