[package]
description = "Grapheme cluster text segmentation (UAX #29) state machine for streaming input."
edition = "2024"
license = "MIT"
name = "grapheme_machine"
repository = "https://github.com/apparentlymart/rust-grapheme-machine"
version = "0.1.0"

[dependencies]
u8char = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
